src/objects/Shipment_Charge__c.object
<CustomObject>
    <fields>
        <fullName>ChargeType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Charge Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Currency</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Price__c</fullName>
        <label>Effective Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Is_Hardware_Product__c</fullName>
        <formula>If(ProductCategory__c = &apos;Telematics Hardware&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Hardware Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Services_Product__c</fullName>
        <formula>IF(ProductCategory__c = &apos;Monthly Service&apos;,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Services Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineGroupingId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Grouping Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>List_Total__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR_EU__c</fullName>
        <label>MRR_EU</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Price_Check__c</fullName>
        <description>Check whether the effective price is greater than the minimum price from the product catalog.</description>
        <label>Min Price Check</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Time_Expense__c</fullName>
        <label>One-Time Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Shipment Charges</relationshipLabel>
        <relationshipName>Shipment_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuoteLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Lookup</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Shipment Charges</relationshipLabel>
        <relationshipName>Shipment_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quote</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePlanChargeId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Plan Charge Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RatePlanId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Plan Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Plan Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Monthly_Expense__c</fullName>
        <label>Recurring Monthly Expense</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceTerm__c</fullName>
        <label>Service Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShipmentChargeGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment Charge Group</label>
        <referenceTo>Shipment_Charge_Group__c</referenceTo>
        <relationshipLabel>Shipment Charges</relationshipLabel>
        <relationshipName>Shipment_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipment_Cost__c</fullName>
        <label>Shipment Cost</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipment Charges</relationshipLabel>
        <relationshipName>Shipment_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <label>TCV</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trigger_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trigger_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trigger Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UOM</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueRollUpValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UniqueRollUpValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Shipment Charge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipment Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>